WIP - fix connect client tests